--- a/note/flutter.html
+++ b/note/flutter.html
@@ -65,17 +65,18 @@
 <section class="content">
 <header>
 <h1>Flutter</h1>
-<div class="title-date">2020년 5월 4일 수정</div>
+<div class="title-date">2020년 5월 8일 수정</div>
 </header>
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4000a30">문제 해결</a>
+<li><a href="#org1d05d88">문제 해결</a>
 <ul>
-<li><a href="#org344d82f">macOS에서 개발자 인증 문제</a></li>
-<li><a href="#orgc1c361b">프레임워크 iOS 아키텍처 오류</a></li>
+<li><a href="#org64c0d1f">macOS에서 개발자 인증 문제</a></li>
+<li><a href="#orga24f4ee">프레임워크 iOS 아키텍처 오류</a></li>
 </ul>
 </li>
+<li><a href="#org5bd7b21">외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -89,13 +90,13 @@ Flutter(플러터)는 <a href="dart.html">Dart</a>라는 한 가지 언어로 iO
 더 이상의 자세한 소개는 생략한다.
 </p>
 
-<div id="outline-container-org4000a30" class="outline-2">
-<h2 id="org4000a30">문제 해결</h2>
-<div class="outline-text-2" id="text-org4000a30">
+<div id="outline-container-org1d05d88" class="outline-2">
+<h2 id="org1d05d88">문제 해결</h2>
+<div class="outline-text-2" id="text-org1d05d88">
 </div>
-<div id="outline-container-org344d82f" class="outline-3">
-<h3 id="org344d82f">macOS에서 개발자 인증 문제</h3>
-<div class="outline-text-3" id="text-org344d82f">
+<div id="outline-container-org64c0d1f" class="outline-3">
+<h3 id="org64c0d1f">macOS에서 개발자 인증 문제</h3>
+<div class="outline-text-3" id="text-org64c0d1f">
 <p>
 Catalina 등 최신 <a href="macos.html">macOS</a>에서 flutter <a href="cli.html">CLI</a>
 도구를 사용하는 중 이런 오류가 나면서 커맨드가 동작하지 않는 경우가 있다.
@@ -128,9 +129,9 @@ Flutter "<code>idevice_id</code>" cannot be opened because the developer cannot 
 </p>
 </div>
 </div>
-<div id="outline-container-orgc1c361b" class="outline-3">
-<h3 id="orgc1c361b">프레임워크 iOS 아키텍처 오류</h3>
-<div class="outline-text-3" id="text-orgc1c361b">
+<div id="outline-container-orga24f4ee" class="outline-3">
+<h3 id="orga24f4ee">프레임워크 iOS 아키텍처 오류</h3>
+<div class="outline-text-3" id="text-orga24f4ee">
 <p>
 <code>run</code> 커맨드로 실행 시 여러 iOS 플랫폼 용으로 빌드를 하다 보면
 이상하게 아래와 같은 오류가 나면서 빌드가 실패하는 케이스를 수 차례 겪었다.
@@ -163,6 +164,14 @@ was built for iOS. (in target 'Runner' from project 'Runner')
 사용하는 모듈에 따라 다를 수 있으니 그 경우에도 비슷하게 대처하자.
 </p>
 </div>
+</div>
+</div>
+<div id="outline-container-org5bd7b21" class="outline-2">
+<h2 id="org5bd7b21">외부 링크</h2>
+<div class="outline-text-2" id="text-org5bd7b21">
+<ul class="org-ul">
+<li><a target="_blank" href="https://medium.com/flutter/announcing-flutter-1-17-4182d8af7f8e">🌏Announcing Flutter 1.17</a></li>
+</ul>
 </div>
 </div>
 <div class="mid-ad-container">
