--- a/note/apple.html
+++ b/note/apple.html
@@ -70,11 +70,11 @@
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4fd4d6b">맥</a></li>
-<li><a href="#org75b71c8">아이폰</a></li>
-<li><a href="#org55a0000">아이패드 및 기타</a></li>
-<li><a href="#orga900ecd">소프트웨어</a></li>
-<li><a href="#org710548c">세계 최고의 시가총액을 가진 회사</a></li>
+<li><a href="#org4314c74">맥</a></li>
+<li><a href="#org179776c">아이폰</a></li>
+<li><a href="#org0200e2f">아이패드 및 기타</a></li>
+<li><a href="#org5406026">소프트웨어</a></li>
+<li><a href="#org4984195">세계 최고의 시가총액을 가진 회사</a></li>
 </ul>
 </div>
 </div>
@@ -88,9 +88,9 @@
 아래는 개인적인 관점으로 애플을 설명하기에 좋을 듯한 주제로 분류한 내용이다.
 </p>
 
-<div id="outline-container-org4fd4d6b" class="outline-2">
-<h2 id="org4fd4d6b">맥</h2>
-<div class="outline-text-2" id="text-org4fd4d6b">
+<div id="outline-container-org4314c74" class="outline-2">
+<h2 id="org4314c74">맥</h2>
+<div class="outline-text-2" id="text-org4314c74">
 <p>
 맥(Mac) 혹은 매킨토시(Machintosh)는 애플에서 개발한 개인용 데스크톱 PC의 이름이다.
 현재는 맥북(Macbook), 맥북프로(Macbook Pro), 아이맥(iMac), 맥프로(Mac Pro) 등 다양한 타입의 PC 제품을 출시하고 있다.
@@ -98,9 +98,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org75b71c8" class="outline-2">
-<h2 id="org75b71c8">아이폰</h2>
-<div class="outline-text-2" id="text-org75b71c8">
+<div id="outline-container-org179776c" class="outline-2">
+<h2 id="org179776c">아이폰</h2>
+<div class="outline-text-2" id="text-org179776c">
 <p>
 아이폰(iPhone)은 전 세계에 스마트폰을 대중화 시킨 가장 큰 주역이고
 애플이 현재처럼 성장할 수 있게 한 가장 큰 주역이기도 하다.
@@ -108,9 +108,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org55a0000" class="outline-2">
-<h2 id="org55a0000">아이패드 및 기타</h2>
-<div class="outline-text-2" id="text-org55a0000">
+<div id="outline-container-org0200e2f" class="outline-2">
+<h2 id="org0200e2f">아이패드 및 기타</h2>
+<div class="outline-text-2" id="text-org0200e2f">
 <p>
 맥과 아이폰 이후로 가장 유명한 제품이 있다면 태블릿 디바이스인 아이패드(iPad)가 있다.
 초기에는 화면만 큰 아이폰 취급을 받기도 했지만
@@ -128,9 +128,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orga900ecd" class="outline-2">
-<h2 id="orga900ecd">소프트웨어</h2>
-<div class="outline-text-2" id="text-orga900ecd">
+<div id="outline-container-org5406026" class="outline-2">
+<h2 id="org5406026">소프트웨어</h2>
+<div class="outline-text-2" id="text-org5406026">
 <p>
 <a href="macos.html">macOS</a>를 더불어 iOS 와 같은 유명한 OS(Operating System) 소프트웨어를 개발하기도 했지만,
 iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 영향을 끼친 소프트웨어를 개발하기도 했다.
@@ -138,9 +138,9 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 </p>
 </div>
 </div>
-<div id="outline-container-org710548c" class="outline-2">
-<h2 id="org710548c">세계 최고의 시가총액을 가진 회사</h2>
-<div class="outline-text-2" id="text-org710548c">
+<div id="outline-container-org4984195" class="outline-2">
+<h2 id="org4984195">세계 최고의 시가총액을 가진 회사</h2>
+<div class="outline-text-2" id="text-org4984195">
 <p>
 관점에 따라서는 애플을 설명하는 가장 좋은 말 일지도 모른다.
 물론 항상 그런 것은 아니지만, 2011년 시가총액 톱을 차지한 이후 계속 높은 자리를 차지하고 있다.
@@ -162,9 +162,16 @@ iTunes 혹은 앱스토어(Appstore) 같은 소프트웨어 생태계에도 큰 
 <hr /><h1>이 글을 링크하는 글들</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/userdefaults.html">UserDefaults</a></h2>
+<div class="article-link-date">
+2020년 5월 8일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/flutter.html">Flutter</a></h2>
 <div class="article-link-date">
-2020년 5월 4일 수정</div>
+2020년 5월 8일 수정</div>
 </div>
 </div>
 <div class="article-link">
